docs: updated readme

--- a/Project_3_Pixel_Art_Maker/README
+++ b/Project_3_Pixel_Art_Maker/README
@@ -1,3 +1,11 @@
-@ further Documentation (an architecture diagram of the app)  
-@ can be viewed at: 
-@ https://drive.google.com/open?id=1AnaMvECCv75bQ-Wi1ozYDOswJqRUwDOt
+# (FEND) Project 3: Pixel Art Maker
+*by **Tony Boswell***
+
+
+# Project Overview
+
+A very simple app design using a completely encapsulated MVC framework, JavaScript, jQuery, and a bit of CSS for aesthetics. A **demo** of the application can be viewed [here](https://shylmysten.github.io/Udacity-Front-End-Developer-Projects/Project_3_Pixel_Art_Maker/).
+
+## Architecture
+A diagram of the applications architecture can be viewed at:
+https://drive.google.com/open?id=1AnaMvECCv75bQ-Wi1ozYDOswJqRUwDOt
